# ChatApp-Monagent

./: Dockerfile  requirements.txt
api/: cli.md  pyproject.toml
api/src/: main.py  test_api.py
app/: __init__.py  main.py
app/models/: __init__.py  feature.py  message.py
app/services/: __init__.py
backend/: README.md
backend/app/core/: config.py
backend/app/models/: user.py
backend/app/services/: assistant_service.py  chat_service.py  file_service.py
backend/legacy/: .gitignore
backend/legacy/api/src/: test_api.py
frontend/: .env.exemple  pyproject.toml
frontend/api/src/: __init__.py
legacy/: requirements.txt
legacy/api/: README.md
legacy/api/src/: main.py
src/assistants/data/knowledge/flet/__extracted_code/: docs_.json  docs_controls.json  docs_controls_ads.json  docs_controls_alertdialog.json  docs_controls_animatedswitcher.json  docs_controls_appbar.json  docs_controls_audio.json  docs_controls_audiorecorder.json  docs_controls_autocomplete.json  docs_controls_autofillgroup.json  docs_controls_banner.json  docs_controls_barchart.json  docs_controls_bottomappbar.json  docs_controls_bottomsheet.json  docs_controls_canvas.json  docs_controls_card.json  docs_controls_checkbox.json  docs_controls_chip.json  docs_controls_circleavatar.json  docs_controls_column.json  docs_controls_container.json  docs_controls_cupertinoactionsheet.json  docs_controls_cupertinoactionsheetaction.json  docs_controls_cupertinoactivityindicator.json  docs_controls_cupertinoalertdialog.json  docs_controls_cupertinoappbar.json  docs_controls_cupertinobottomsheet.json  (+159 more)
(+336 files in other folders)
